tests/baselines/reference/parserES5ComputedPropertyName8.errors.txt
parserES5ComputedPropertyName8.ts(1,11): error TS2304: Cannot find name 'e'.


==== parserES5ComputedPropertyName8.ts (1 errors) ====
    var v: { [e]: number };
              ~
!!! error TS2304: Cannot find name 'e'.